2009-02-11  Alexey Proskuryakov  <ap@webkit.org>

        Trying to fix wx build.

        * bytecode/JumpTable.h: Include "MacroAssembler.h", not <MacroAssembler.h>.
        * jscore.bkl: Added assembler directory to search paths.

2009-02-10  Gavin Barraclough  <barraclough@apple.com>

        Build
        fix.
        (Narrow
        changelog
        for
        dhyatt).

        * bytecode/Instruction.h:
        (JSC::PolymorphicAccessStructureList::PolymorphicStubInfo::set):
        (JSC::PolymorphicAccessStructureList::PolymorphicAccessStructureList):

2009-02-10  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Reduce use of void* / reinterpret_cast in JIT repatching code,
        add strong types for Calls and for the various types of pointers
        we retain into the JIT generated instruction stream.

        No performance impact.

        * assembler/AbstractMacroAssembler.h:
        (JSC::AbstractMacroAssembler::ImmPtr::ImmPtr):
        (JSC::AbstractMacroAssembler::ImmPtr::asIntptr):
        (JSC::AbstractMacroAssembler::Imm32::Imm32):
        (JSC::AbstractMacroAssembler::Label::Label):
        (JSC::AbstractMacroAssembler::DataLabelPtr::DataLabelPtr):
        (JSC::AbstractMacroAssembler::Call::Call):
        (JSC::AbstractMacroAssembler::Call::link):
        (JSC::AbstractMacroAssembler::Call::linkTo):
        (JSC::AbstractMacroAssembler::Jump::Jump):
        (JSC::AbstractMacroAssembler::Jump::linkTo):
        (JSC::AbstractMacroAssembler::CodeLocationCommon::CodeLocationCommon):
        (JSC::AbstractMacroAssembler::CodeLocationCommon::operator bool):
        (JSC::AbstractMacroAssembler::CodeLocationCommon::reset):
        (JSC::AbstractMacroAssembler::CodeLocationLabel::CodeLocationLabel):
        (JSC::AbstractMacroAssembler::CodeLocationLabel::addressForSwitch):
        (JSC::AbstractMacroAssembler::CodeLocationLabel::addressForExceptionHandler):